src/Sintactico/y.output
   0  $accept : programa $end

   1  programa : IDENTIFICADOR bloque_declarativo bloque_ejecutable
   2           | error_programa

   3  error_programa : bloque_declarativo bloque_ejecutable
   4                 | IDENTIFICADOR bloque_ejecutable bloque_declarativo

   5  bloque_declarativo : declaracion
   6                     | bloque_declarativo declaracion

   7  bloque_ejecutable : BEGIN bloque_sentencias END
   8                    | error_bloque_ejecutable

   9  bloque_sentencias : sentencia_ejecucion
  10                    | bloque_sentencias sentencia_ejecucion

  11  error_bloque_ejecutable : bloque_sentencias END
  12                          | BEGIN bloque_sentencias error

  13  sentencia_ejecucion : control
  14                      | seleccion ';'
  15                      | impresion ';'
  16                      | invocacion ';'
  17                      | asignacion ';'
  18                      | error_ejecucion

  19  error_ejecucion : seleccion error
  20                  | impresion error
  21                  | asignacion error
  22                  | invocacion error

  23  declaracion : tipo lista_de_variables ';'
  24              | tipo funcion ';'
  25              | TYPEDEF IDENTIFICADOR '=' tipo funcion_type ';'
  26              | error_declaracion

  27  error_declaracion : tipo lista_de_variables error
  28                    | tipo funcion error
  29                    | funcion ';'

  30  tipo : ULONG
  31       | DOUBLE

  32  control : REPEAT '(' IDENTIFICADOR ASIGNACION CTE_ULONG ';' condicion ';' CTE_ULONG ')' bloque_repeat ';'
  33          | error_control

  34  error_control : REPEAT IDENTIFICADOR '=' CTE_ULONG ';' condicion ';' CTE_ULONG ')' bloque_repeat ';'
  35                | REPEAT '(' '=' CTE_ULONG ';' condicion ';' CTE_ULONG ')' bloque_repeat ';'
  36                | REPEAT '(' IDENTIFICADOR CTE_ULONG ';' condicion ';' CTE_ULONG ')' bloque_repeat ';'
  37                | REPEAT '(' IDENTIFICADOR '=' ';' condicion ';' CTE_ULONG ')' bloque_repeat ';'
  38                | REPEAT '(' IDENTIFICADOR '=' CTE_ULONG condicion ';' CTE_ULONG ')' bloque_repeat ';'
  39                | REPEAT '(' IDENTIFICADOR '=' CTE_ULONG ';' ';' CTE_ULONG ')' bloque_repeat ';'
  40                | REPEAT '(' IDENTIFICADOR '=' CTE_ULONG ';' condicion CTE_ULONG ')' bloque_repeat ';'
  41                | REPEAT '(' IDENTIFICADOR '=' CTE_ULONG ';' condicion ';' ')' bloque_repeat ';'
  42                | REPEAT '(' IDENTIFICADOR '=' CTE_ULONG ';' condicion ';' CTE_ULONG bloque_repeat ';'
  43                | REPEAT '(' IDENTIFICADOR '=' CTE_ULONG ';' condicion ';' CTE_ULONG ')' ';'
  44                | REPEAT '(' IDENTIFICADOR '=' CTE_ULONG ';' condicion ';' CTE_ULONG ')' bloque_repeat error

  45  bloque_repeat : BEGIN bloque_control END

  46  bloque_control : sentencia_control
  47                 | bloque_control sentencia_control

  48  sentencia_control : sentencia_ejecucion
  49                    | BREAK ';'
  50                    | error_sentencia_control

  51  error_sentencia_control : BREAK error

  52  asignacion : IDENTIFICADOR ASIGNACION condicion
  53             | error_asignacion

  54  error_asignacion : ASIGNACION condicion
  55                   | IDENTIFICADOR condicion
  56                   | IDENTIFICADOR ASIGNACION

  57  seleccion : IF '(' condicion ')' THEN bloque_if ENDIF
  58            | IF '(' condicion ')' THEN bloque_if ELSE bloque_if ENDIF
  59            | error_seleccion

  60  bloque_if : sentencia_ejecucion
  61            | BEGIN sentencia_ejecucion bloque_sentencias END ';'

  62  error_seleccion : '(' condicion ')' THEN bloque_if ENDIF
  63                  | IF condicion ')' THEN bloque_if ENDIF
  64                  | IF '(' ')' THEN bloque_if ENDIF
  65                  | IF '(' condicion THEN bloque_if ENDIF
  66                  | IF '(' condicion ')' bloque_if ENDIF
  67                  | IF '(' condicion ')' THEN ENDIF
  68                  | IF '(' condicion ')' THEN bloque_if
  69                  | IF '(' condicion ')' THEN bloque_if ELSE ENDIF
  70                  | IF '(' condicion ')' THEN bloque_if ELSE bloque_if

  71  impresion : PRINT '(' CADENA ')'

  72  invocacion : IDENTIFICADOR '(' parametro ')'
  73             | error_invocacion

  74  error_invocacion : '(' parametro ')'
  75                   | IDENTIFICADOR parametro ')'
  76                   | IDENTIFICADOR '(' ')'
  77                   | IDENTIFICADOR '(' parametro

  78  lista_de_variables : lista_de_variables ',' IDENTIFICADOR
  79                     | IDENTIFICADOR
  80                     | error_lista_de_variables

  81  error_lista_de_variables : lista_de_variables IDENTIFICADOR

  82  funcion : FUNC IDENTIFICADOR '(' parametro ')' bloque_funcion
  83          | error_funcion

  84  error_funcion : IDENTIFICADOR '(' parametro ')' bloque_funcion
  85                | FUNC '(' parametro ')' bloque_funcion
  86                | FUNC IDENTIFICADOR parametro ')' bloque_funcion
  87                | FUNC IDENTIFICADOR '(' ')' bloque_funcion
  88                | FUNC IDENTIFICADOR '(' parametro bloque_funcion
  89                | FUNC IDENTIFICADOR '(' parametro ')'

  90  parametro : tipo IDENTIFICADOR
  91            | error_parametro

  92  error_parametro : tipo error

  93  funcion_type : FUNC '(' tipo ')' bloque_type

  94  bloque_type : IDENTIFICADOR lista_de_variables

  95  bloque_funcion : bloque_declarativo bloque_ejecucion_funcion
  96                 | bloque_declarativo TRY sentencia_ejecucion CATCH bloque_ejecutable
  97                 | error_bloque_funcion

  98  error_bloque_funcion : bloque_declarativo sentencia_ejecucion CATCH bloque_ejecutable
  99                       | bloque_declarativo TRY CATCH bloque_ejecutable
 100                       | bloque_declarativo TRY sentencia_ejecucion bloque_ejecutable

 101  bloque_ejecucion_funcion : BEGIN bloque_sentencias RETURN '(' condicion ')' ';' END
 102                           | BEGIN PRE ':' condicion ';' bloque_sentencias RETURN '(' condicion ')' END
 103                           | error_bloque_ejecucion_funcion

 104  error_bloque_ejecucion_funcion : bloque_sentencias RETURN '(' condicion ')' ';' END
 105                                 | BEGIN RETURN '(' condicion ')' ';' END
 106                                 | BEGIN bloque_sentencias '(' condicion ')' ';' END
 107                                 | BEGIN bloque_sentencias RETURN condicion ')' ';' END
 108                                 | BEGIN bloque_sentencias RETURN '(' ')' ';' END
 109                                 | BEGIN bloque_sentencias RETURN '(' condicion ';' END
 110                                 | BEGIN bloque_sentencias RETURN '(' condicion ')' END

 111  $$1 :

 112  error_bloque_ejecucion_funcion : BEGIN bloque_sentencias RETURN '(' condicion ')' ';' error $$1 PRE '(' condicion ')' bloque_sentencias RETURN '(' condicion ')' ';' END
 113                                 | BEGIN PRE '(' condicion ')' RETURN '(' condicion ')' ';' END
 114                                 | BEGIN PRE '(' condicion ')' bloque_sentencias '(' condicion ')' ';' END
 115                                 | BEGIN PRE '(' condicion ')' bloque_sentencias RETURN condicion ')' ';' END
 116                                 | BEGIN PRE '(' condicion ')' bloque_sentencias RETURN '(' ')' ';' END
 117                                 | BEGIN PRE '(' condicion ')' bloque_sentencias RETURN '(' condicion ';' END
 118                                 | BEGIN PRE '(' condicion ')' bloque_sentencias RETURN '(' condicion ')' END
 119                                 | BEGIN PRE '(' condicion ')' bloque_sentencias RETURN '(' condicion ')' ';' error
 120                                 | BEGIN PRE condicion ')' bloque_sentencias RETURN '(' condicion ')' ';' END
 121                                 | BEGIN PRE '(' ')' bloque_sentencias RETURN '(' condicion ')' ';' END
 122                                 | BEGIN PRE '(' condicion bloque_sentencias RETURN '(' condicion ')' ';' END

 123  condicion : expresion
 124            | condicion OR expresion

 125  expresion : expresion1
 126            | expresion AND expresion1

 127  expresion1 : expresion2
 128             | expresion1 comparador expresion2

 129  expresion2 : termino
 130             | expresion2 '+' termino
 131             | expresion2 '-' termino

 132  termino : termino '*' factor
 133          | termino '/' factor
 134          | factor

 135  factor : CTE_DOUBLE
 136         | CTE_ULONG
 137         | '-' factor
 138         | IDENTIFICADOR

 139  comparador : '<'
 140             | '>'
 141             | IGUAL_IGUAL
 142             | MAYOR_IGUAL
 143             | MENOR_IGUAL
 144             | DISTINTO

state 0
	$accept : . programa $end  (0)

	IDENTIFICADOR  shift 1
	FUNC  shift 2
	ULONG  shift 3
	DOUBLE  shift 4
	TYPEDEF  shift 5
	.  error

	programa  goto 6
	bloque_declarativo  goto 7
	error_programa  goto 8
	declaracion  goto 9
	tipo  goto 10
	funcion  goto 11
	error_declaracion  goto 12
	error_funcion  goto 13


state 1
	programa : IDENTIFICADOR . bloque_declarativo bloque_ejecutable  (1)
	error_programa : IDENTIFICADOR . bloque_ejecutable bloque_declarativo  (4)
	error_funcion : IDENTIFICADOR . '(' parametro ')' bloque_funcion  (84)

	IDENTIFICADOR  shift 14
	ASIGNACION  shift 15
	IF  shift 16
	PRINT  shift 17
	FUNC  shift 2
	BEGIN  shift 18
	ULONG  shift 3
	DOUBLE  shift 4
	REPEAT  shift 19
	TYPEDEF  shift 5
	'('  shift 20
	.  error

	bloque_declarativo  goto 21
	bloque_ejecutable  goto 22
	declaracion  goto 9
	bloque_sentencias  goto 23
	error_bloque_ejecutable  goto 24
	sentencia_ejecucion  goto 25
	control  goto 26
	seleccion  goto 27
	impresion  goto 28
	invocacion  goto 29
	asignacion  goto 30
	error_ejecucion  goto 31
	tipo  goto 10
	funcion  goto 11
	error_declaracion  goto 12
	error_control  goto 32
	error_asignacion  goto 33
	error_seleccion  goto 34
	error_invocacion  goto 35
	error_funcion  goto 13


state 2
	funcion : FUNC . IDENTIFICADOR '(' parametro ')' bloque_funcion  (82)
	error_funcion : FUNC . '(' parametro ')' bloque_funcion  (85)
	error_funcion : FUNC . IDENTIFICADOR parametro ')' bloque_funcion  (86)
	error_funcion : FUNC . IDENTIFICADOR '(' ')' bloque_funcion  (87)
	error_funcion : FUNC . IDENTIFICADOR '(' parametro bloque_funcion  (88)
	error_funcion : FUNC . IDENTIFICADOR '(' parametro ')'  (89)

	IDENTIFICADOR  shift 36
	'('  shift 37
	.  error


state 3
	tipo : ULONG .  (30)

	.  reduce 30


state 4
	tipo : DOUBLE .  (31)

	.  reduce 31


state 5
	declaracion : TYPEDEF . IDENTIFICADOR '=' tipo funcion_type ';'  (25)

	IDENTIFICADOR  shift 38
	.  error


state 6
	$accept : programa . $end  (0)

	$end  accept


state 7
	error_programa : bloque_declarativo . bloque_ejecutable  (3)
	bloque_declarativo : bloque_declarativo . declaracion  (6)

	IDENTIFICADOR  shift 14
	ASIGNACION  shift 15
	IF  shift 16
	PRINT  shift 17
	FUNC  shift 2
	BEGIN  shift 18
	ULONG  shift 3
	DOUBLE  shift 4
	REPEAT  shift 19
	TYPEDEF  shift 5
	'('  shift 39
	.  error

	bloque_ejecutable  goto 40
	declaracion  goto 41
	bloque_sentencias  goto 23
	error_bloque_ejecutable  goto 24
	sentencia_ejecucion  goto 25
	control  goto 26
	seleccion  goto 27
	impresion  goto 28
	invocacion  goto 29
	asignacion  goto 30
	error_ejecucion  goto 31
	tipo  goto 10
	funcion  goto 11
	error_declaracion  goto 12
	error_control  goto 32
	error_asignacion  goto 33
	error_seleccion  goto 34
	error_invocacion  goto 35
	error_funcion  goto 13


state 8
	programa : error_programa .  (2)

	.  reduce 2


state 9
	bloque_declarativo : declaracion .  (5)

	.  reduce 5


state 10
	declaracion : tipo . lista_de_variables ';'  (23)
	declaracion : tipo . funcion ';'  (24)
	error_declaracion : tipo . lista_de_variables error  (27)
	error_declaracion : tipo . funcion error  (28)

	IDENTIFICADOR  shift 42
	FUNC  shift 2
	.  error

	lista_de_variables  goto 43
	funcion  goto 44
	error_lista_de_variables  goto 45
	error_funcion  goto 13


state 11
	error_declaracion : funcion . ';'  (29)

	';'  shift 46
	.  error


state 12
	declaracion : error_declaracion .  (26)

	.  reduce 26


state 13
	funcion : error_funcion .  (83)

	.  reduce 83


state 14
	asignacion : IDENTIFICADOR . ASIGNACION condicion  (52)
	error_asignacion : IDENTIFICADOR . condicion  (55)
	error_asignacion : IDENTIFICADOR . ASIGNACION  (56)
	invocacion : IDENTIFICADOR . '(' parametro ')'  (72)
	error_invocacion : IDENTIFICADOR . parametro ')'  (75)
	error_invocacion : IDENTIFICADOR . '(' ')'  (76)
	error_invocacion : IDENTIFICADOR . '(' parametro  (77)
	error_funcion : IDENTIFICADOR . '(' parametro ')' bloque_funcion  (84)

	IDENTIFICADOR  shift 47
	CTE_ULONG  shift 48
	ASIGNACION  shift 49
	CTE_DOUBLE  shift 50
	ULONG  shift 3
	DOUBLE  shift 4
	'('  shift 51
	'-'  shift 52
	.  error

	tipo  goto 53
	condicion  goto 54
	parametro  goto 55
	error_parametro  goto 56
	expresion  goto 57
	expresion1  goto 58
	expresion2  goto 59
	termino  goto 60
	factor  goto 61


state 15
	error_asignacion : ASIGNACION . condicion  (54)

	IDENTIFICADOR  shift 47
	CTE_ULONG  shift 48
	CTE_DOUBLE  shift 50
	'-'  shift 52
	.  error

	condicion  goto 62
	expresion  goto 57
	expresion1  goto 58
	expresion2  goto 59
	termino  goto 60
	factor  goto 61


state 16
	seleccion : IF . '(' condicion ')' THEN bloque_if ENDIF  (57)
	seleccion : IF . '(' condicion ')' THEN bloque_if ELSE bloque_if ENDIF  (58)
	error_seleccion : IF . condicion ')' THEN bloque_if ENDIF  (63)
	error_seleccion : IF . '(' ')' THEN bloque_if ENDIF  (64)
	error_seleccion : IF . '(' condicion THEN bloque_if ENDIF  (65)
	error_seleccion : IF . '(' condicion ')' bloque_if ENDIF  (66)
	error_seleccion : IF . '(' condicion ')' THEN ENDIF  (67)
	error_seleccion : IF . '(' condicion ')' THEN bloque_if  (68)
	error_seleccion : IF . '(' condicion ')' THEN bloque_if ELSE ENDIF  (69)
	error_seleccion : IF . '(' condicion ')' THEN bloque_if ELSE bloque_if  (70)

	IDENTIFICADOR  shift 47
	CTE_ULONG  shift 48
	CTE_DOUBLE  shift 50
	'('  shift 63
	'-'  shift 52
	.  error

	condicion  goto 64
	expresion  goto 57
	expresion1  goto 58
	expresion2  goto 59
	termino  goto 60
	factor  goto 61


state 17
	impresion : PRINT . '(' CADENA ')'  (71)

	'('  shift 65
	.  error


state 18
	bloque_ejecutable : BEGIN . bloque_sentencias END  (7)
	error_bloque_ejecutable : BEGIN . bloque_sentencias error  (12)

	IDENTIFICADOR  shift 66
	ASIGNACION  shift 15
	IF  shift 16
	PRINT  shift 17
	REPEAT  shift 19
	'('  shift 39
	.  error

	bloque_sentencias  goto 67
	sentencia_ejecucion  goto 25
	control  goto 26
	seleccion  goto 27
	impresion  goto 28
	invocacion  goto 29
	asignacion  goto 30
	error_ejecucion  goto 31
	error_control  goto 32
	error_asignacion  goto 33
	error_seleccion  goto 34
	error_invocacion  goto 35


state 19
	control : REPEAT . '(' IDENTIFICADOR ASIGNACION CTE_ULONG ';' condicion ';' CTE_ULONG ')' bloque_repeat ';'  (32)
	error_control : REPEAT . IDENTIFICADOR '=' CTE_ULONG ';' condicion ';' CTE_ULONG ')' bloque_repeat ';'  (34)
	error_control : REPEAT . '(' '=' CTE_ULONG ';' condicion ';' CTE_ULONG ')' bloque_repeat ';'  (35)
	error_control : REPEAT . '(' IDENTIFICADOR CTE_ULONG ';' condicion ';' CTE_ULONG ')' bloque_repeat ';'  (36)
	error_control : REPEAT . '(' IDENTIFICADOR '=' ';' condicion ';' CTE_ULONG ')' bloque_repeat ';'  (37)
	error_control : REPEAT . '(' IDENTIFICADOR '=' CTE_ULONG condicion ';' CTE_ULONG ')' bloque_repeat ';'  (38)
	error_control : REPEAT . '(' IDENTIFICADOR '=' CTE_ULONG ';' ';' CTE_ULONG ')' bloque_repeat ';'  (39)
	error_control : REPEAT . '(' IDENTIFICADOR '=' CTE_ULONG ';' condicion CTE_ULONG ')' bloque_repeat ';'  (40)
	error_control : REPEAT . '(' IDENTIFICADOR '=' CTE_ULONG ';' condicion ';' ')' bloque_repeat ';'  (41)
	error_control : REPEAT . '(' IDENTIFICADOR '=' CTE_ULONG ';' condicion ';' CTE_ULONG bloque_repeat ';'  (42)
	error_control : REPEAT . '(' IDENTIFICADOR '=' CTE_ULONG ';' condicion ';' CTE_ULONG ')' ';'  (43)
	error_control : REPEAT . '(' IDENTIFICADOR '=' CTE_ULONG ';' condicion ';' CTE_ULONG ')' bloque_repeat error  (44)

	IDENTIFICADOR  shift 68
	'('  shift 69
	.  error


state 20
	error_seleccion : '(' . condicion ')' THEN bloque_if ENDIF  (62)
	error_invocacion : '(' . parametro ')'  (74)
	error_funcion : IDENTIFICADOR '(' . parametro ')' bloque_funcion  (84)

	IDENTIFICADOR  shift 47
	CTE_ULONG  shift 48
	CTE_DOUBLE  shift 50
	ULONG  shift 3
	DOUBLE  shift 4
	'-'  shift 52
	.  error

	tipo  goto 53
	condicion  goto 70
	parametro  goto 71
	error_parametro  goto 56
	expresion  goto 57
	expresion1  goto 58
	expresion2  goto 59
	termino  goto 60
	factor  goto 61


state 21
	programa : IDENTIFICADOR bloque_declarativo . bloque_ejecutable  (1)
	bloque_declarativo : bloque_declarativo . declaracion  (6)

	IDENTIFICADOR  shift 14
	ASIGNACION  shift 15
	IF  shift 16
	PRINT  shift 17
	FUNC  shift 2
	BEGIN  shift 18
	ULONG  shift 3
	DOUBLE  shift 4
	REPEAT  shift 19
	TYPEDEF  shift 5
	'('  shift 39
	.  error

	bloque_ejecutable  goto 72
	declaracion  goto 41
	bloque_sentencias  goto 23
	error_bloque_ejecutable  goto 24
	sentencia_ejecucion  goto 25
	control  goto 26
	seleccion  goto 27
	impresion  goto 28
	invocacion  goto 29
	asignacion  goto 30
	error_ejecucion  goto 31
	tipo  goto 10
	funcion  goto 11
	error_declaracion  goto 12
	error_control  goto 32
	error_asignacion  goto 33
	error_seleccion  goto 34
	error_invocacion  goto 35
	error_funcion  goto 13


state 22
	error_programa : IDENTIFICADOR bloque_ejecutable . bloque_declarativo  (4)

	IDENTIFICADOR  shift 73
	FUNC  shift 2
	ULONG  shift 3
	DOUBLE  shift 4
	TYPEDEF  shift 5
	.  error

	bloque_declarativo  goto 74
	declaracion  goto 9
	tipo  goto 10
	funcion  goto 11
	error_declaracion  goto 12
	error_funcion  goto 13


state 23
	bloque_sentencias : bloque_sentencias . sentencia_ejecucion  (10)
	error_bloque_ejecutable : bloque_sentencias . END  (11)

	IDENTIFICADOR  shift 66
	ASIGNACION  shift 15
	IF  shift 16
	PRINT  shift 17
	END  shift 75
	REPEAT  shift 19
	'('  shift 39
	.  error

	sentencia_ejecucion  goto 76
	control  goto 26
	seleccion  goto 27
	impresion  goto 28
	invocacion  goto 29
	asignacion  goto 30
	error_ejecucion  goto 31
	error_control  goto 32
	error_asignacion  goto 33
	error_seleccion  goto 34
	error_invocacion  goto 35


state 24
	bloque_ejecutable : error_bloque_ejecutable .  (8)

	.  reduce 8


state 25
	bloque_sentencias : sentencia_ejecucion .  (9)

	.  reduce 9


state 26
	sentencia_ejecucion : control .  (13)

	.  reduce 13


state 27
	sentencia_ejecucion : seleccion . ';'  (14)
	error_ejecucion : seleccion . error  (19)

	error  shift 77
	';'  shift 78
	.  error


state 28
	sentencia_ejecucion : impresion . ';'  (15)
	error_ejecucion : impresion . error  (20)

	error  shift 79
	';'  shift 80
	.  error


state 29
	sentencia_ejecucion : invocacion . ';'  (16)
	error_ejecucion : invocacion . error  (22)

	error  shift 81
	';'  shift 82
	.  error


state 30
	sentencia_ejecucion : asignacion . ';'  (17)
	error_ejecucion : asignacion . error  (21)

	error  shift 83
	';'  shift 84
	.  error


state 31
	sentencia_ejecucion : error_ejecucion .  (18)

	.  reduce 18


state 32
	control : error_control .  (33)

	.  reduce 33


state 33
	asignacion : error_asignacion .  (53)

	.  reduce 53


state 34
	seleccion : error_seleccion .  (59)

	.  reduce 59


state 35
	invocacion : error_invocacion .  (73)

	.  reduce 73


state 36
	funcion : FUNC IDENTIFICADOR . '(' parametro ')' bloque_funcion  (82)
	error_funcion : FUNC IDENTIFICADOR . parametro ')' bloque_funcion  (86)
	error_funcion : FUNC IDENTIFICADOR . '(' ')' bloque_funcion  (87)
	error_funcion : FUNC IDENTIFICADOR . '(' parametro bloque_funcion  (88)
	error_funcion : FUNC IDENTIFICADOR . '(' parametro ')'  (89)

	ULONG  shift 3
	DOUBLE  shift 4
	'('  shift 85
	.  error

	tipo  goto 53
	parametro  goto 86
	error_parametro  goto 56


state 37
	error_funcion : FUNC '(' . parametro ')' bloque_funcion  (85)

	ULONG  shift 3
	DOUBLE  shift 4
	.  error

	tipo  goto 53
	parametro  goto 87
	error_parametro  goto 56


state 38
	declaracion : TYPEDEF IDENTIFICADOR . '=' tipo funcion_type ';'  (25)

	'='  shift 88
	.  error


state 39
	error_seleccion : '(' . condicion ')' THEN bloque_if ENDIF  (62)
	error_invocacion : '(' . parametro ')'  (74)

	IDENTIFICADOR  shift 47
	CTE_ULONG  shift 48
	CTE_DOUBLE  shift 50
	ULONG  shift 3
	DOUBLE  shift 4
	'-'  shift 52
	.  error

	tipo  goto 53
	condicion  goto 70
	parametro  goto 89
	error_parametro  goto 56
	expresion  goto 57
	expresion1  goto 58
	expresion2  goto 59
	termino  goto 60
	factor  goto 61


state 40
	error_programa : bloque_declarativo bloque_ejecutable .  (3)

	.  reduce 3


state 41
	bloque_declarativo : bloque_declarativo declaracion .  (6)

	.  reduce 6


state 42
	lista_de_variables : IDENTIFICADOR .  (79)
	error_funcion : IDENTIFICADOR . '(' parametro ')' bloque_funcion  (84)

	'('  shift 90
	error  reduce 79
	IDENTIFICADOR  reduce 79
	';'  reduce 79
	','  reduce 79


state 43
	declaracion : tipo lista_de_variables . ';'  (23)
	error_declaracion : tipo lista_de_variables . error  (27)
	lista_de_variables : lista_de_variables . ',' IDENTIFICADOR  (78)
	error_lista_de_variables : lista_de_variables . IDENTIFICADOR  (81)

	error  shift 91
	IDENTIFICADOR  shift 92
	';'  shift 93
	','  shift 94
	.  error


state 44
	declaracion : tipo funcion . ';'  (24)
	error_declaracion : tipo funcion . error  (28)

	error  shift 95
	';'  shift 96
	.  error


state 45
	lista_de_variables : error_lista_de_variables .  (80)

	.  reduce 80


state 46
	error_declaracion : funcion ';' .  (29)

	.  reduce 29


state 47
	factor : IDENTIFICADOR .  (138)

	.  reduce 138


state 48
	factor : CTE_ULONG .  (136)

	.  reduce 136


state 49
	asignacion : IDENTIFICADOR ASIGNACION . condicion  (52)
	error_asignacion : IDENTIFICADOR ASIGNACION .  (56)

	IDENTIFICADOR  shift 47
	CTE_ULONG  shift 48
	CTE_DOUBLE  shift 50
	'-'  shift 52
	error  reduce 56
	';'  reduce 56

	condicion  goto 97
	expresion  goto 57
	expresion1  goto 58
	expresion2  goto 59
	termino  goto 60
	factor  goto 61


state 50
	factor : CTE_DOUBLE .  (135)

	.  reduce 135


state 51
	invocacion : IDENTIFICADOR '(' . parametro ')'  (72)
	error_invocacion : IDENTIFICADOR '(' . ')'  (76)
	error_invocacion : IDENTIFICADOR '(' . parametro  (77)
	error_funcion : IDENTIFICADOR '(' . parametro ')' bloque_funcion  (84)

	ULONG  shift 3
	DOUBLE  shift 4
	')'  shift 98
	.  error

	tipo  goto 53
	parametro  goto 99
	error_parametro  goto 56


state 52
	factor : '-' . factor  (137)

	IDENTIFICADOR  shift 47
	CTE_ULONG  shift 48
	CTE_DOUBLE  shift 50
	'-'  shift 52
	.  error

	factor  goto 100


state 53
	parametro : tipo . IDENTIFICADOR  (90)
	error_parametro : tipo . error  (92)

	error  shift 101
	IDENTIFICADOR  shift 102
	.  error


state 54
	error_asignacion : IDENTIFICADOR condicion .  (55)
	condicion : condicion . OR expresion  (124)

	OR  shift 103
	error  reduce 55
	';'  reduce 55


state 55
	error_invocacion : IDENTIFICADOR parametro . ')'  (75)

	')'  shift 104
	.  error


state 56
	parametro : error_parametro .  (91)

	.  reduce 91


state 57
	condicion : expresion .  (123)
	expresion : expresion . AND expresion1  (126)

	AND  shift 105
	error  reduce 123
	IDENTIFICADOR  reduce 123
	CTE_ULONG  reduce 123
	ASIGNACION  reduce 123
	OR  reduce 123
	IF  reduce 123
	THEN  reduce 123
	PRINT  reduce 123
	REPEAT  reduce 123
	';'  reduce 123
	'('  reduce 123
	')'  reduce 123


state 58
	expresion : expresion1 .  (125)
	expresion1 : expresion1 . comparador expresion2  (128)

	MAYOR_IGUAL  shift 106
	MENOR_IGUAL  shift 107
	IGUAL_IGUAL  shift 108
	DISTINTO  shift 109
	'<'  shift 110
	'>'  shift 111
	error  reduce 125
	IDENTIFICADOR  reduce 125
	CTE_ULONG  reduce 125
	ASIGNACION  reduce 125
	AND  reduce 125
	OR  reduce 125
	IF  reduce 125
	THEN  reduce 125
	PRINT  reduce 125
	REPEAT  reduce 125
	';'  reduce 125
	'('  reduce 125
	')'  reduce 125

	comparador  goto 112


state 59
	expresion1 : expresion2 .  (127)
	expresion2 : expresion2 . '+' termino  (130)
	expresion2 : expresion2 . '-' termino  (131)

	'+'  shift 113
	'-'  shift 114
	error  reduce 127
	IDENTIFICADOR  reduce 127
	CTE_ULONG  reduce 127
	MAYOR_IGUAL  reduce 127
	MENOR_IGUAL  reduce 127
	IGUAL_IGUAL  reduce 127
	DISTINTO  reduce 127
	ASIGNACION  reduce 127
	AND  reduce 127
	OR  reduce 127
	IF  reduce 127
	THEN  reduce 127
	PRINT  reduce 127
	REPEAT  reduce 127
	';'  reduce 127
	'('  reduce 127
	')'  reduce 127
	'<'  reduce 127
	'>'  reduce 127


state 60
	expresion2 : termino .  (129)
	termino : termino . '*' factor  (132)
	termino : termino . '/' factor  (133)

	'*'  shift 115
	'/'  shift 116
	error  reduce 129
	IDENTIFICADOR  reduce 129
	CTE_ULONG  reduce 129
	MAYOR_IGUAL  reduce 129
	MENOR_IGUAL  reduce 129
	IGUAL_IGUAL  reduce 129
	DISTINTO  reduce 129
	ASIGNACION  reduce 129
	AND  reduce 129
	OR  reduce 129
	IF  reduce 129
	THEN  reduce 129
	PRINT  reduce 129
	REPEAT  reduce 129
	';'  reduce 129
	'('  reduce 129
	')'  reduce 129
	'+'  reduce 129
	'-'  reduce 129
	'<'  reduce 129
	'>'  reduce 129


state 61
	termino : factor .  (134)

	.  reduce 134


state 62
	error_asignacion : ASIGNACION condicion .  (54)
	condicion : condicion . OR expresion  (124)

	OR  shift 103
	error  reduce 54
	';'  reduce 54


state 63
	seleccion : IF '(' . condicion ')' THEN bloque_if ENDIF  (57)
	seleccion : IF '(' . condicion ')' THEN bloque_if ELSE bloque_if ENDIF  (58)
	error_seleccion : IF '(' . ')' THEN bloque_if ENDIF  (64)
	error_seleccion : IF '(' . condicion THEN bloque_if ENDIF  (65)
	error_seleccion : IF '(' . condicion ')' bloque_if ENDIF  (66)
	error_seleccion : IF '(' . condicion ')' THEN ENDIF  (67)
	error_seleccion : IF '(' . condicion ')' THEN bloque_if  (68)
	error_seleccion : IF '(' . condicion ')' THEN bloque_if ELSE ENDIF  (69)
	error_seleccion : IF '(' . condicion ')' THEN bloque_if ELSE bloque_if  (70)

	IDENTIFICADOR  shift 47
	CTE_ULONG  shift 48
	CTE_DOUBLE  shift 50
	')'  shift 117
	'-'  shift 52
	.  error

	condicion  goto 118
	expresion  goto 57
	expresion1  goto 58
	expresion2  goto 59
	termino  goto 60
	factor  goto 61


state 64
	error_seleccion : IF condicion . ')' THEN bloque_if ENDIF  (63)
	condicion : condicion . OR expresion  (124)

	OR  shift 103
	')'  shift 119
	.  error


state 65
	impresion : PRINT '(' . CADENA ')'  (71)

	CADENA  shift 120
	.  error


state 66
	asignacion : IDENTIFICADOR . ASIGNACION condicion  (52)
	error_asignacion : IDENTIFICADOR . condicion  (55)
	error_asignacion : IDENTIFICADOR . ASIGNACION  (56)
	invocacion : IDENTIFICADOR . '(' parametro ')'  (72)
	error_invocacion : IDENTIFICADOR . parametro ')'  (75)
	error_invocacion : IDENTIFICADOR . '(' ')'  (76)
	error_invocacion : IDENTIFICADOR . '(' parametro  (77)

	IDENTIFICADOR  shift 47
	CTE_ULONG  shift 48
	ASIGNACION  shift 49
	CTE_DOUBLE  shift 50
	ULONG  shift 3
	DOUBLE  shift 4
	'('  shift 121
	'-'  shift 52
	.  error

	tipo  goto 53
	condicion  goto 54
	parametro  goto 55
	error_parametro  goto 56
	expresion  goto 57
	expresion1  goto 58
	expresion2  goto 59
	termino  goto 60
	factor  goto 61


state 67
	bloque_ejecutable : BEGIN bloque_sentencias . END  (7)
	bloque_sentencias : bloque_sentencias . sentencia_ejecucion  (10)
	error_bloque_ejecutable : BEGIN bloque_sentencias . error  (12)
